style.css
/* css reset */
*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
}

img,
picture {
  display: block;
  max-width: 100%;
}

/* css variables */
:root {
  /* ## Colors */

  /* Primary */

  --primary-500: hsl(215, 51%, 70%);
  --primary-400: hsl(178, 100%, 50%);
  --primary-400-alpha: hsla(178, 100%, 50%, 0.3);

  /* Neutral */

  --neutral-100: hsl(0, 0%, 100%);
  --neutral-950: hsl(217, 54%, 11%);
  --neutral-900: hsl(216, 50%, 16%);
  --neutral-800: hsl(215, 32%, 27%);

  /* font stuff */
  --ff-base: "Outfit", sans-serif;

  --fw-light: 300;
  --fw-regular: 400;
  --fw-bold: 600;
}

/* base styling */

body {
  min-height: 100vh;
  display: grid;
  place-content: center;
  color: var(--primary-500);
  background-color: var(--neutral-950);
  font-family: var(--ff-base);
  font-weight: var(--fw-light);
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  overflow: hidden;
  clip-path: inset(50%);
  white-space: nowrap;
  border: 0;
}

.title,
.creator-name {
  color: var(--neutral-100);
  cursor: pointer;
  transition: color 0.2s ease-in-out;
}
.title:hover,
.creator-name:hover {
  color: var(--primary-400);
}

/* -------component styling-------- */
.product-card {
  max-width: 350px;
  display: grid;
  gap: 1rem;
  padding: 1.5em;
  margin: 1rem;
  border-radius: 1em;
  background-color: var(--neutral-900);
  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.25);
}
.product-header {
  display: grid;
  gap: 1rem;
  padding-bottom: 1rem;
  border-bottom: 1px solid var(--neutral-800);
}
.header-img-wrapper {
  border-radius: 0.5em;
  position: relative;
  overflow: hidden;
  cursor: pointer;
}
.header-img-wrapper::after {
  content: url(images/icon-view.svg);
  display: flex;
  justify-content: center;
  align-items: center;
  position: absolute;
  inset: 0;
  background-color: var(--primary-400-alpha);
  opacity: 0;
  transition: opacity 1s ease;
}
/* .header-img-wrapper:hover::after {
  opacity: 1;
} */
/* 💻 Enable hover effect only for devices that support hover */
@media (hover: hover) and (pointer: fine) {
  .header-img-wrapper:hover::after {
    opacity: 1;
  }
}
.title {
  font-weight: var(--fw-bold);
}
.product-details {
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.price {
  color: var(--primary-400);
  font-weight: var(--fw-bold);
}
.date {
  font-weight: var(--fw-regular);
}
.price,
.date {
  display: flex;
  align-items: center;
  gap: 0.5em;
}

.creator-info {
  display: flex;
  align-items: center;
  gap: 0.5rem;
}
.image-wrapper img {
  width: 30px;
  height: 30px;
}
.image-wrapper {
  border: 1px solid var(--neutral-100);
  border-radius: 50%;
  overflow: hidden;
  transition: transform 0.5s ease, border 0.5s ease;
}
.creator-info:has(.creator-name:hover) .image-wrapper {
  transform: scale(1.1);
  border-color: var(--primary-400);
}

.creator-name {
  font-weight: var(--fw-regular);
}

/* ------attribution-------- */

.attribution {
  text-align: center;
}

.attribution a {
  display: inline-block;
  margin-left: 0.2em;
  font-weight: var(--fw-bold);
  color: var(--neutral-100);
  text-decoration: none;
  transition: color 0.5s ease, transform 0.5s ease;
}
.attribution a:hover {
  color: var(--primary-400);
  transform: translateY(-2px);
}

